Fonts added, store expanded.

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,3 +1,11 @@
 $purple66: #664DCE;
-$bg: #F4F2F9;
+$purple4F: #4F41B7;
+
+$pinkF8: #F886AE;
+$pinkDE: #DE6D97;
+$selected: #f4edff;
+
+$bg: #faf9fc;
 $black: #333;
+
+$disabledGrey: #c8cbd6;
