--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,6 @@
 $purple66: #664DCE;
 $purple4F: #4F41B7;
+// $purpleEF: #efe8fc;
 
 $pinkF8: #F886AE;
 $pinkDE: #DE6D97;
@@ -10,3 +11,5 @@ $black: #333;
 $red: #d84f6a;
 
 $disabledGrey: #c8cbd6;
+
+$borderRadius: 30px
