--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -9,3 +9,15 @@
         inset: -5px;
     }
 }
+
+@mixin modalOverlay {
+    position: fixed;
+    inset: 0;
+    width: 100vw;
+    z-index: 1000;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba($color: #000000, $alpha: .5);
+}
