Flashcards game finish options added, minor code refactoring done.

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,6 +5,16 @@ $pinkF8: #F886AE;
 $pinkDE: #DE6D97;
 $selected: #f4edff;
 
+$greenLight: #cce9e4;
+$greenMedium: #a3d5cc;
+$greenDark: #518a81;
+$greenSat: #95cc65;
+
+$orangeLight: #ffead2;
+$orangeMedium: #ffd7ad;
+$orangeDark: #d08842;
+$orangeSat: #f7bb4e;
+
 $bg: #faf9fc;
 $black: #333;
 $red: #d84f6a;
